--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,2 +1,7 @@
-I would like to thank my supervisor, Dr Kieran Murphy, for his fantastic help and excellent guidance throughout this process. It's been
-a pleasure working with him.
+I would like to thank my supervisor, Dr Kieran Murphy, for your fantastic help and excellent guidance throughout this process. It's been
+a pleasure working with you. I've learned an awful lot from you. This formatting is for you.\\
+I would also like to thank Walid from UBIAI, without the generous student discount for the annotation software I would still 
+be manually annotating documents now, and this would be a very short report.
+\bigbreak
+Most of all I would like to thank my wife and kids for their support, inspiration and for putting up with me throughout this entire 
+process. This report would be nonexistent without ye. This one's for you Becca. 
