--- a/fyp.bib
+++ b/fyp.bib
@@ -1,4 +1,23 @@
 
+@misc{aiGPT3NoLonger,
+  title = {{{GPT-3}} Is {{No Longer}} the {{Only Game}} in {{Town}}},
+  author = {in AI, Last Week},
+  abstract = {GPT-3 was by far the largest AI model of its kind last year. Now? Not so much.},
+  howpublished = {https://lastweekin.ai/p/gpt-3-is-no-longer-the-only-game},
+  file = {/home/dimdakis/Zotero/storage/8G3P2IC3/gpt-3-is-no-longer-the-only-game.html}
+}
+
+@misc{AIWeeklyAI2021,
+  title = {{{AI Weekly}}: {{AI}} Model Training Costs on the Rise, Highlighting Need for New Solutions},
+  shorttitle = {{{AI Weekly}}},
+  year = {2021},
+  month = oct,
+  journal = {VentureBeat},
+  abstract = {AI models are becoming larger -- and more capable. But they're also becoming more costly to train, highlighting a problem in the field.},
+  langid = {american},
+  file = {/home/dimdakis/Zotero/storage/8GJ9FPG6/ai-weekly-ai-model-training-costs-on-the-rise-highlighting-need-for-new-solutions.html}
+}
+
 @misc{alammarIllustratedTransformer,
   title = {The {{Illustrated Transformer}}},
   author = {Alammar, Jay},
@@ -17,6 +36,18 @@
   howpublished = {https://towardsdatascience.com/fine-tuning-layoutlm-v2-for-invoice-recognition-91bf2546b19e},
   langid = {english},
   file = {/home/dimdakis/Zotero/storage/6SBXMRRI/fine-tuning-layoutlm-v2-for-invoice-recognition-91bf2546b19e.html}
+}
+
+@misc{amamouFineTuningTransformerModel2021,
+  title = {Fine-{{Tuning Transformer Model}} for {{Invoice Recognition}}},
+  author = {Amamou, Walid},
+  year = {2021},
+  month = aug,
+  journal = {Medium},
+  abstract = {A step-by-step guide from annotation to training},
+  howpublished = {https://towardsdatascience.com/fine-tuning-transformer-model-for-invoice-recognition-1e55869336d4},
+  langid = {english},
+  file = {/home/dimdakis/Zotero/storage/HZJMP67M/fine-tuning-transformer-model-for-invoice-recognition-1e55869336d4.html}
 }
 
 @misc{ApacheKafka,
@@ -68,11 +99,34 @@
   langid = {english}
 }
 
+@article{baoUniLMv2PseudoMaskedLanguage2020,
+  title = {{{UniLMv2}}: {{Pseudo-Masked Language Models}} for {{Unified Language Model Pre-Training}}},
+  shorttitle = {{{UniLMv2}}},
+  author = {Bao, Hangbo and Dong, Li and Wei, Furu and Wang, Wenhui and Yang, Nan and Liu, Xiaodong and Wang, Yu and Piao, Songhao and Gao, Jianfeng and Zhou, Ming and Hon, Hsiao-Wuen},
+  year = {2020},
+  month = feb,
+  journal = {arXiv:2002.12804 [cs]},
+  eprint = {2002.12804},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  abstract = {We propose to pre-train a unified language model for both autoencoding and partially autoregressive language modeling tasks using a novel training procedure, referred to as a pseudo-masked language model (PMLM). Given an input text with masked tokens, we rely on conventional masks to learn inter-relations between corrupted tokens and context via autoencoding, and pseudo masks to learn intra-relations between masked spans via partially autoregressive modeling. With welldesigned position embeddings and self-attention masks, the context encodings are reused to avoid redundant computation. Moreover, conventional masks used for autoencoding provide global masking information, so that all the position embeddings are accessible in partially autoregressive language modeling. In addition, the two tasks pre-train a unified language model as a bidirectional encoder and a sequence-to-sequence decoder, respectively. Our experiments show that the unified language models pre-trained using PMLM achieve new state-of-the-art results on a wide range of natural language understanding and generation tasks across several widely used benchmarks.},
+  archiveprefix = {arXiv},
+  langid = {english},
+  keywords = {Computer Science - Computation and Language},
+  file = {/home/dimdakis/Zotero/storage/K3MBAMPS/Bao et al. - 2020 - UniLMv2 Pseudo-Masked Language Models for Unified.pdf}
+}
+
 @misc{BERT,
   title = {{{BERT}}},
   abstract = {We're on a journey to advance and democratize artificial intelligence through open source and open science.},
   howpublished = {https://huggingface.co/docs/transformers/model\_doc/bert},
   file = {/home/dimdakis/Zotero/storage/5UBZCPS2/bert.html}
+}
+
+@misc{BERTNaturalLanguage,
+  title = {{{BERT}} for {{Natural Language Processing}} |{{All You Need}} to Know about {{BERT}}},
+  abstract = {BERT stands for Bidirectional Encoder Representation from Transformer and uses deep bidirectional layers of transformers encoders},
+  howpublished = {https://www.analyticsvidhya.com/blog/2021/05/all-you-need-to-know-about-bert/}
 }
 
 @misc{BestCDCTools,
@@ -104,6 +158,29 @@
   file = {/home/dimdakis/Zotero/storage/GQ9YK3AY/encoder-decoder-recurrent-neural-network-models-neural-machine-translation.html}
 }
 
+@misc{brownleeGentleIntroductionCrossEntropy2019,
+  title = {A {{Gentle Introduction}} to {{Cross-Entropy}} for {{Machine Learning}}},
+  author = {Brownlee, Jason},
+  year = {2019},
+  month = oct,
+  journal = {Machine Learning Mastery},
+  abstract = {Cross-entropy is commonly used in machine learning as a loss function. Cross-entropy is a measure from the field of information [\ldots ]},
+  langid = {american},
+  file = {/home/dimdakis/Zotero/storage/43N5BIGB/cross-entropy-for-machine-learning.html}
+}
+
+@misc{calvoDissectingBERTPart2019,
+  title = {Dissecting {{BERT Part}} 1: {{The Encoder}}},
+  shorttitle = {Dissecting {{BERT Part}} 1},
+  author = {Calvo, Miguel Romero},
+  year = {2019},
+  month = may,
+  journal = {Dissecting BERT},
+  abstract = {This is Part 1/2 of Understanding BERT written jointly by Miguel Romero and Francisco Ingham. If you already understand the Encoder\ldots},
+  langid = {english},
+  file = {/home/dimdakis/Zotero/storage/X5M86LSF/dissecting-bert-part-1-d3c3d495cdb3.html}
+}
+
 @misc{ClickUpOneApp,
   title = {{{ClickUp}}\texttrademark{} | {{One}} App to Replace Them All},
   abstract = {Our mission is to make the world more productive. To do this, we built one app to replace them all - Tasks, Docs, Goals, and Chat.},
@@ -120,6 +197,14 @@
   howpublished = {https://www.cloudfactory.com/data-annotation-tool-guide},
   langid = {english},
   file = {/home/dimdakis/Zotero/storage/8ZSS247W/data-annotation-tool-guide.html}
+}
+
+@misc{codeemporiumBERTNeuralNetwork2020,
+  title = {{{BERT Neural Network}} - {{EXPLAINED}}!},
+  author = {{CodeEmporium}},
+  year = {2020},
+  month = may,
+  abstract = {Understand the BERT Transformer in and out. Please subscribe to keep me alive: https://www.youtube.com/c/CodeEmporiu... INVESTING [1] Webull (You can get 3 free stocks setting up a webull account today): https://a.webull.com/8XVa1znjYxio6ESdff REFERENCES [1] BERT main paper: https://arxiv.org/pdf/1810.04805.pdf [1] BERT in google search: https://blog.google/products/search/s... [2] Overview of BERT: https://arxiv.org/pdf/2002.12327v1.pdf [4] BERT word embeddings explained: https://medium.com/@\_init\_/why-bert-h... [5] More details of BERT in this amazing blog: https://towardsdatascience.com/bert-e... [6] Stanford lecture slides on BERT: https://nlp.stanford.edu/seminar/deta...}
 }
 
 @misc{ComputerVisionCenter,
@@ -214,6 +299,23 @@
   file = {/home/dimdakis/Zotero/storage/PRJC474R/Deploying a Containerized API on Kubernetes  by victor steven  Level Up Coding.html}
 }
 
+@article{devlinBERTPretrainingDeep2019,
+  title = {{{BERT}}: {{Pre-training}} of {{Deep Bidirectional Transformers}} for {{Language Understanding}}},
+  shorttitle = {{{BERT}}},
+  author = {Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+  year = {2019},
+  month = may,
+  journal = {arXiv:1810.04805 [cs]},
+  eprint = {1810.04805},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  abstract = {We introduce a new language representation model called BERT, which stands for Bidirectional Encoder Representations from Transformers. Unlike recent language representation models (Peters et al., 2018a; Radford et al., 2018), BERT is designed to pretrain deep bidirectional representations from unlabeled text by jointly conditioning on both left and right context in all layers. As a result, the pre-trained BERT model can be finetuned with just one additional output layer to create state-of-the-art models for a wide range of tasks, such as question answering and language inference, without substantial taskspecific architecture modifications.},
+  archiveprefix = {arXiv},
+  langid = {english},
+  keywords = {Computer Science - Computation and Language},
+  file = {/home/dimdakis/Zotero/storage/NZEG4YAC/Devlin et al. - 2019 - BERT Pre-training of Deep Bidirectional Transform.pdf}
+}
+
 @misc{dhamiUnderstandingBERTWord2020,
   title = {Understanding {{BERT}} \textemdash{} {{Word Embeddings}}},
   author = {Dhami, Dharti},
@@ -248,6 +350,32 @@
   howpublished = {https://github.com/debezium/docker-images},
   langid = {english},
   file = {/home/dimdakis/Zotero/storage/VS2MZTN9/9.html}
+}
+
+@article{dongUnifiedLanguageModel2019,
+  title = {Unified {{Language Model Pre-training}} for {{Natural Language Understanding}} and {{Generation}}},
+  author = {Dong, Li and Yang, Nan and Wang, Wenhui and Wei, Furu and Liu, Xiaodong and Wang, Yu and Gao, Jianfeng and Zhou, Ming and Hon, Hsiao-Wuen},
+  year = {2019},
+  month = oct,
+  journal = {arXiv:1905.03197 [cs]},
+  eprint = {1905.03197},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  abstract = {This paper presents a new UNIfied pre-trained Language Model (UNILM) that can be fine-tuned for both natural language understanding and generation tasks. The model is pre-trained using three types of language modeling tasks: unidirectional, bidirectional, and sequence-to-sequence prediction. The unified modeling is achieved by employing a shared Transformer network and utilizing specific self-attention masks to control what context the prediction conditions on. UNILM compares favorably with BERT on the GLUE benchmark, and the SQuAD 2.0 and CoQA question answering tasks. Moreover, UNILM achieves new state-ofthe-art results on five natural language generation datasets, including improving the CNN/DailyMail abstractive summarization ROUGE-L to 40.51 (2.04 absolute improvement), the Gigaword abstractive summarization ROUGE-L to 35.75 (0.86 absolute improvement), the CoQA generative question answering F1 score to 82.5 (37.1 absolute improvement), the SQuAD question generation BLEU-4 to 22.12 (3.75 absolute improvement), and the DSTC7 document-grounded dialog response generation NIST-4 to 2.67 (human performance is 2.65). The code and pre-trained models are available at https://github.com/microsoft/unilm.},
+  archiveprefix = {arXiv},
+  langid = {english},
+  keywords = {Computer Science - Computation and Language},
+  file = {/home/dimdakis/Zotero/storage/I3255268/Dong et al. - 2019 - Unified Language Model Pre-training for Natural La.pdf}
+}
+
+@misc{dontlooAnswerWhatExactly2019,
+  title = {Answer to "{{What}} Exactly Are Keys, Queries, and Values in Attention Mechanisms?"},
+  shorttitle = {Answer to "{{What}} Exactly Are Keys, Queries, and Values in Attention Mechanisms?},
+  author = {{dontloo}},
+  year = {2019},
+  month = aug,
+  journal = {Cross Validated},
+  file = {/home/dimdakis/Zotero/storage/M8ERYT5V/what-exactly-are-keys-queries-and-values-in-attention-mechanisms.html}
 }
 
 @misc{doshiTransformersExplainedVisually2021,
@@ -288,6 +416,19 @@
   file = {/home/dimdakis/Zotero/storage/GZABTYYF/transformers-explained-visually-not-just-how-but-why-they-work-so-well-d840bd61a9d3.html}
 }
 
+@misc{doshiTransformersExplainedVisually2021c,
+  title = {Transformers {{Explained Visually}} ({{Part}} 2): {{How}} It Works, Step-by-Step},
+  shorttitle = {Transformers {{Explained Visually}} ({{Part}} 2)},
+  author = {Doshi, Ketan},
+  year = {2021},
+  month = jun,
+  journal = {Medium},
+  abstract = {A Gentle Guide to the Transformer under the hood, and its end-to-end operation.},
+  howpublished = {https://towardsdatascience.com/transformers-explained-visually-part-2-how-it-works-step-by-step-b49fa4a64f34},
+  langid = {english},
+  file = {/home/dimdakis/Zotero/storage/LIZWCDY9/transformers-explained-visually-part-2-how-it-works-step-by-step-b49fa4a64f34.html}
+}
+
 @inproceedings{duttaAnnotationSoftwareImages2019,
   title = {The {{VIA Annotation Software}} for {{Images}}, {{Audio}} and {{Video}}},
   booktitle = {Proceedings of the 27th {{ACM International Conference}} on {{Multimedia}}},
@@ -324,6 +465,16 @@
   howpublished = {https://ubiai.tools/blog/article/fine-tuning-transformer-model},
   langid = {english},
   file = {/home/dimdakis/Zotero/storage/4AZ686BU/fine-tuning-transformer-model.html}
+}
+
+@misc{emilAnswerWhatExactly2020,
+  title = {Answer to "{{What}} Exactly Are Keys, Queries, and Values in Attention Mechanisms?"},
+  shorttitle = {Answer to "{{What}} Exactly Are Keys, Queries, and Values in Attention Mechanisms?},
+  author = {Emil},
+  year = {2020},
+  month = jan,
+  journal = {Cross Validated},
+  file = {/home/dimdakis/Zotero/storage/NHQPRWYA/what-exactly-are-keys-queries-and-values-in-attention-mechanisms.html}
 }
 
 @misc{EngineConfigurationSQLAlchemy,
@@ -370,6 +521,13 @@
   abstract = {Feedforward Neural Networks, also known as Deep feedforward Networks or Multi-layer Perceptrons, are the focus of this article.},
   langid = {english},
   file = {/home/dimdakis/Zotero/storage/HHG34CSF/feedforward-neural-network-its-layers-functions-and-importance.html}
+}
+
+@misc{FinetunePretrainedModel,
+  title = {Fine-Tune a Pretrained Model},
+  abstract = {We're on a journey to advance and democratize artificial intelligence through open source and open science.},
+  howpublished = {https://huggingface.co/docs/transformers/training},
+  file = {/home/dimdakis/Zotero/storage/57CS7XEA/training.html}
 }
 
 @misc{FUNSD,
@@ -442,12 +600,37 @@
   file = {/home/dimdakis/Zotero/storage/9E8W4RAA/deep-learning-feedforward-neural-network-26a6705dbdc7.html}
 }
 
+@article{HarmonicMean2022,
+  title = {Harmonic Mean},
+  year = {2022},
+  month = apr,
+  journal = {Wikipedia},
+  abstract = {In mathematics, the harmonic mean is one of several kinds of average, and in particular, one of the Pythagorean means. It is sometimes appropriate for situations when the average rate is desired. The harmonic mean can be expressed as the reciprocal of the arithmetic mean of the reciprocals of the given set of observations. As a simple example, the harmonic mean of 1, 4, and 4 is                                                (                                                                                     1                                            -                       1                                                           +                                        4                                            -                       1                                                           +                                        4                                            -                       1                                                                          3                                         )                                   -             1                             =                                 3                                                                1                   1                                               +                                                   1                   4                                               +                                                   1                   4                                                                          =                                 3             1.5                             =         2                  .                 \{\textbackslash displaystyle \textbackslash left(\{\textbackslash frac \{1\^\{-1\}+4\^\{-1\}+4\^\{-1\}\}\{3\}\}\textbackslash right)\^\{-1\}=\{\textbackslash frac \{3\}\{\{\textbackslash frac \{1\}\{1\}\}+\{\textbackslash frac \{1\}\{4\}\}+\{\textbackslash frac \{1\}\{4\}\}\}\}=\{\textbackslash frac \{3\}\{1.5\}\}=2\textbackslash,.\}},
+  copyright = {Creative Commons Attribution-ShareAlike License},
+  langid = {english},
+  annotation = {Page Version ID: 1083612353},
+  file = {/home/dimdakis/Zotero/storage/RC9926P8/Harmonic_mean.html}
+}
+
 @misc{Helm,
   title = {Helm},
   abstract = {Helm - The Kubernetes Package Manager.},
   howpublished = {https://helm.sh/},
   langid = {american},
   file = {/home/dimdakis/Zotero/storage/LQN9LERF/helm.sh.html}
+}
+
+@misc{horevBERTExplainedState2018,
+  title = {{{BERT Explained}}: {{State}} of the Art Language Model for {{NLP}}},
+  shorttitle = {{{BERT Explained}}},
+  author = {Horev, Rani},
+  year = {2018},
+  month = nov,
+  journal = {Medium},
+  abstract = {An approachable and understandable explanation of BERT, a recent paper by Google that achieved SOTA results in wide variety of NLP tasks.},
+  howpublished = {https://towardsdatascience.com/bert-explained-state-of-the-art-language-model-for-nlp-f8b21a9b6270},
+  langid = {english},
+  file = {/home/dimdakis/Zotero/storage/4Y72R99R/bert-explained-state-of-the-art-language-model-for-nlp-f8b21a9b6270.html}
 }
 
 @misc{HowGiantCompanies,
@@ -542,6 +725,18 @@
   file = {/home/dimdakis/Zotero/storage/BKBEV3K5/wordpiece-subword-based-tokenization-algorithm-1fbd14394ed7.html}
 }
 
+@misc{korstanjeF1Score2021,
+  title = {The {{F1}} Score},
+  author = {Korstanje, Joos},
+  year = {2021},
+  month = aug,
+  journal = {Medium},
+  abstract = {All you need to know about the F1 score in machine learning. With an example applying the F1 score in Python.},
+  howpublished = {https://towardsdatascience.com/the-f1-score-bec2bbc38aa6},
+  langid = {english},
+  file = {/home/dimdakis/Zotero/storage/JZC27VAH/the-f1-score-bec2bbc38aa6.html}
+}
+
 @misc{KubernetesAdoptionTrends,
   title = {Kubernetes {{Adoption Trends Report}}},
   howpublished = {https://www.cockroachlabs.com/guides/kubernetes-trends/},
@@ -622,6 +817,17 @@
   file = {/home/dimdakis/Zotero/storage/F969IVJA/layoutlmv2.html}
 }
 
+@misc{leeConfusionMatrixPrecision2021,
+  title = {Confusion {{Matrix}} ({{Precision}}, {{Recall}}, {{F1 Score}})},
+  author = {Lee, Ron},
+  year = {2021},
+  month = mar,
+  journal = {Medium},
+  abstract = {The confusion matrix is a useful tools to measure the effectiveness of model. It can be explained in a table with 4 different combination\ldots},
+  langid = {english},
+  file = {/home/dimdakis/Zotero/storage/LDSVARRT/confusion-matrix-precision-recall-f1-score-76e579eb2d48.html}
+}
+
 @misc{LessonsLearnedRunning,
   title = {Lessons {{Learned}} from {{Running Debezium}} with {{PostgreSQL}} on {{Amazon RDS}}},
   howpublished = {https://debezium.io/blog/2020/02/25/lessons-learned-running-debezium-with-postgresql-on-rds/}
@@ -639,10 +845,32 @@
   file = {/home/dimdakis/Zotero/storage/AP3XHUXI/postgres-plugins.html}
 }
 
+@misc{maoLayerNormalizationExplained2019,
+  title = {Layer {{Normalization Explained}}},
+  author = {Mao, Lei},
+  year = {2019},
+  month = may,
+  journal = {Lei Mao's Log Book},
+  abstract = {Layer Normalization vs Batch Normalization vs Instance Normalization},
+  howpublished = {https://leimao.github.io/blog/Layer-Normalization/},
+  langid = {english},
+  file = {/home/dimdakis/Zotero/storage/7UDE63SQ/Layer-Normalization.html}
+}
+
 @misc{MethodStrucTexTTask,
   title = {Method: {{StrucTexT}} - {{Task}} 3 - {{Key Information Extraction}} - {{ICDAR}} 2019 {{Robust Reading Challenge}} on {{Scanned Receipts OCR}} and {{Information Extraction}} - {{Robust Reading Competition}}},
   howpublished = {https://rrc.cvc.uab.es/?ch=13\&com=evaluation\&view=method\_info\&task=3\&m=90335},
   file = {/home/dimdakis/Zotero/storage/TFEHEXIZ/rrc.cvc.uab.es.html}
+}
+
+@misc{MicrosoftNvidiaTeam2021,
+  title = {Microsoft and {{Nvidia}} Team up to Train One of the World's Largest Language Models},
+  year = {2021},
+  month = oct,
+  journal = {VentureBeat},
+  abstract = {Microsoft and Nvidia claim to have trained one of the world's largest natural language models, containing 530 billion parameters.},
+  langid = {american},
+  file = {/home/dimdakis/Zotero/storage/XFVTZ7CQ/microsoft-and-nvidia-team-up-to-train-one-of-the-worlds-largest-language-models.html}
 }
 
 @misc{MinikubeStart,
@@ -659,6 +887,30 @@
   abstract = {We're on a journey to advance and democratize artificial intelligence through open source and open science.},
   howpublished = {https://huggingface.co/models},
   file = {/home/dimdakis/Zotero/storage/383T6HMK/models.html}
+}
+
+@misc{mohajonConfusionMatrixYour2021,
+  title = {Confusion {{Matrix}} for {{Your Multi-Class Machine Learning Model}}},
+  author = {Mohajon, Joydwip},
+  year = {2021},
+  month = jul,
+  journal = {Medium},
+  abstract = {A beginner's guide on how to calculate Precision, Recall, F1-score for a multi-class classification problem.},
+  howpublished = {https://towardsdatascience.com/confusion-matrix-for-your-multi-class-machine-learning-model-ff9aa3bf7826},
+  langid = {english},
+  file = {/home/dimdakis/Zotero/storage/7DHL6MFR/confusion-matrix-for-your-multi-class-machine-learning-model-ff9aa3bf7826.html}
+}
+
+@misc{montantesBERTTransformersHow2021,
+  title = {{{BERT Transformers}} \textemdash{} {{How Do They Work}}?},
+  author = {Montantes, James},
+  year = {2021},
+  month = apr,
+  journal = {Medium},
+  abstract = {BERT Transformers Are Revolutionary But How Do They Work?},
+  howpublished = {https://becominghuman.ai/bert-transformers-how-do-they-work-cd44e8e31359},
+  langid = {english},
+  file = {/home/dimdakis/Zotero/storage/L6JTA7WT/bert-transformers-how-do-they-work-cd44e8e31359.html}
 }
 
 @misc{munozAttentionAllYou2021,
@@ -785,6 +1037,19 @@
   file = {/home/dimdakis/Zotero/storage/S6GWPILF/making-http-requests-in-python.html}
 }
 
+@misc{rahmanCOMPASCaseStudy2020,
+  title = {{{COMPAS Case Study}}: {{Fairness}} of a {{Machine Learning Model}}},
+  shorttitle = {{{COMPAS Case Study}}},
+  author = {Rahman, Farhan},
+  year = {2020},
+  month = sep,
+  journal = {Medium},
+  abstract = {COMPAS and classifier fairness},
+  howpublished = {https://towardsdatascience.com/compas-case-study-fairness-of-a-machine-learning-model-f0f804108751},
+  langid = {english},
+  file = {/home/dimdakis/Zotero/storage/XREAJN7D/compas-case-study-fairness-of-a-machine-learning-model-f0f804108751.html}
+}
+
 @misc{ReleasesStrimziStrimzikafkaoperator,
   title = {Releases {$\cdot$} Strimzi/Strimzi-Kafka-Operator},
   journal = {GitHub},
@@ -794,10 +1059,10 @@
   file = {/home/dimdakis/Zotero/storage/GXFZJ9FN/0.26.html}
 }
 
-@misc{ResultsICDAR2019a,
+@misc{ResultsICDAR2019,
   title = {Results - {{ICDAR}} 2019 {{Robust Reading Challenge}} on {{Scanned Receipts OCR}} and {{Information Extraction}} - {{Robust Reading Competition}}},
   howpublished = {https://rrc.cvc.uab.es/?ch=13\&com=evaluation\&task=3},
-  file = {/home/dimdakis/Zotero/storage/A9REYKPX/rrc.cvc.uab.es.html}
+  file = {/home/dimdakis/Zotero/storage/JSHQ9GUX/rrc.cvc.uab.es.html}
 }
 
 @misc{RoBERTa,
@@ -831,6 +1096,16 @@
   abstract = {If you've just gotten started with Kubernetes, you might be curious to know how the desired state is achieved? Think\ldots},
   langid = {american},
   file = {/home/dimdakis/Zotero/storage/BY28S9ZV/kubernetes-desired-state-and-control-loops.html}
+}
+
+@misc{seanWhatExactlyAre2020,
+  type = {Forum Post},
+  title = {What Exactly Are Keys, Queries, and Values in Attention Mechanisms?},
+  author = {Sean},
+  year = {2020},
+  month = dec,
+  journal = {Cross Validated},
+  file = {/home/dimdakis/Zotero/storage/4K98HYZS/what-exactly-are-keys-queries-and-values-in-attention-mechanisms.html}
 }
 
 @misc{Secrets,
@@ -907,6 +1182,15 @@
   howpublished = {https://link.medium.com/tEMxXnwlvmb}
 }
 
+@misc{thea.i.hacker-michaelphiIllustratedGuideTransformers2020,
+  title = {Illustrated {{Guide}} to {{Transformers Neural Network}}: {{A}} Step by Step Explanation},
+  shorttitle = {Illustrated {{Guide}} to {{Transformers Neural Network}}},
+  author = {{The A.I. Hacker - Michael Phi}},
+  year = {2020},
+  month = apr,
+  abstract = {Transformers are the rage nowadays, but how do they work? This video demystifies the novel neural network architecture with step by step explanation and illustrations on how transformers work. CORRECTIONS: The sine and cosine functions are actually applied to the embedding dimensions and time steps!  Audo Studio | Automagically Make Audio Recordings Studio Quality https://www.audostudio.com/ Magic Mic | Join waitlist and get it FREE forever when launched! 🎙️ https://magicmic.ai/ Audo AI | Audio Background Noise Removal Developer API and SDK https://audo.ai/ Subscribe to my email newsletter for updated Content.  No spam 🙅‍\male ️ only gold 🥇. https://bit.ly/320hUdx Discord Server: Join a community of A.I. Hackers https://discord.gg/9wSTT4F Hugging Face Write with Transformers https://transformer.huggingface.co/}
+}
+
 @misc{TipsTricksRunning,
   title = {Tips \& {{Tricks}} for Running {{Strimzi}} with Kubectl},
   howpublished = {https://strimzi.io/blog/2020/07/22/tips-and-tricks-for-running-strimzi-with-kubectl/},
@@ -920,11 +1204,27 @@
   file = {/home/dimdakis/Zotero/storage/XMZ6VTA3/token_classification.html}
 }
 
+@misc{TransformerArchitectureSelfattention,
+  title = {Transformer Architecture, Self-Attention},
+  abstract = {Explore and run machine learning code with Kaggle Notebooks | Using data from No attached data sources},
+  howpublished = {https://www.kaggle.com/residentmario/transformer-architecture-self-attention}
+}
+
 @misc{Transformers,
   title = {Transformers},
   abstract = {We're on a journey to advance and democratize artificial intelligence through open source and open science.},
   howpublished = {https://huggingface.co/docs/transformers/index},
   file = {/home/dimdakis/Zotero/storage/BCF2836N/index.html}
+}
+
+@misc{tsengAnswerWhatExactly2020,
+  title = {Answer to "{{What}} Exactly Are Keys, Queries, and Values in Attention Mechanisms?"},
+  shorttitle = {Answer to "{{What}} Exactly Are Keys, Queries, and Values in Attention Mechanisms?},
+  author = {Tseng, Sam},
+  year = {2020},
+  month = apr,
+  journal = {Cross Validated},
+  file = {/home/dimdakis/Zotero/storage/E8VJSJ23/what-exactly-are-keys-queries-and-values-in-attention-mechanisms.html}
 }
 
 @misc{UnderstandingBackpropagationNeural,
@@ -999,6 +1299,12 @@
   abstract = {Image Polygonal Annotation with Python (polygon, rectangle, circle, line, point and image-level flag annotation).}
 }
 
+@misc{WhatAttention,
+  title = {What Is {{Attention}}?},
+  abstract = {Attention is becoming increasingly popular in machine learning, but what makes it such an attractive concept? What is the relationship [\ldots ]},
+  howpublished = {https://machinelearningmastery.com/what-is-attention/}
+}
+
 @misc{WhatEventdrivenArchitecture,
   title = {What Is Event-Driven Architecture?},
   howpublished = {https://www.redhat.com/en/topics/integration/what-is-event-driven-architecture},
@@ -1066,6 +1372,24 @@
   abstract = {Debezium is an open source distributed platform for change data capture. Start it up, point it at your databases, and your apps can start responding to all of the inserts, updates, and deletes that other apps commit to your databases. Debezium is durable and fast, so your apps can respond quickly and never miss an event, even when things go wrong.},
   howpublished = {https://debezium.io/community/users/},
   file = {/home/dimdakis/Zotero/storage/HIR6YUTZ/users.html}
+}
+
+@article{xuLayoutLMPretrainingText2020,
+  title = {{{LayoutLM}}: {{Pre-training}} of {{Text}} and {{Layout}} for {{Document Image Understanding}}},
+  shorttitle = {{{LayoutLM}}},
+  author = {Xu, Yiheng and Li, Minghao and Cui, Lei and Huang, Shaohan and Wei, Furu and Zhou, Ming},
+  year = {2020},
+  month = aug,
+  journal = {Proceedings of the 26th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
+  eprint = {1912.13318},
+  eprinttype = {arxiv},
+  pages = {1192--1200},
+  doi = {10.1145/3394486.3403172},
+  abstract = {Pre-training techniques have been verified successfully in a variety of NLP tasks in recent years. Despite the widespread use of pre-training models for NLP applications, they almost exclusively focus on text-level manipulation, while neglecting layout and style information that is vital for document image understanding. In this paper, we propose the LayoutLM to jointly model interactions between text and layout information across scanned document images, which is beneficial for a great number of real-world document image understanding tasks such as information extraction from scanned documents. Furthermore, we also leverage image features to incorporate words' visual information into LayoutLM. To the best of our knowledge, this is the first time that text and layout are jointly learned in a single framework for documentlevel pre-training. It achieves new state-of-the-art results in several downstream tasks, including form understanding (from 70.72 to 79.27), receipt understanding (from 94.02 to 95.24) and document image classification (from 93.07 to 94.42). The code and pre-trained LayoutLM models are publicly available at https://aka.ms/layoutlm.},
+  archiveprefix = {arXiv},
+  langid = {english},
+  keywords = {Computer Science - Computation and Language},
+  file = {/home/dimdakis/Zotero/storage/GDBIW7J5/Xu et al. - 2020 - LayoutLM Pre-training of Text and Layout for Docu.pdf}
 }
 
 @article{xuLayoutLMv2MultimodalPretraining2022,
